# ur5-simulation

./: README.md
grasping_with_perception_interfaces/: CMakeLists.txt  package.xml
grasping_with_perception_interfaces/action/: Findapriltag.action
simple_box_with_marker_description/: CMakeLists.txt  package.xml
simple_box_with_marker_description/launch/: pick_place_box.launch.py
simple_box_with_marker_description/meshes/: tag36_11_000CB.dae
simple_box_with_marker_description/urdf/: apriltag_marker.xacro  materials.xacro  simple_box.urdf.xacro  simple_box.xacro  simple_box_apriltag.urdf.xacro  simple_box_apriltag.xacro  simple_box_apriltag_vision.urdf.xacro  utilities.xacro
svd_process/: package.xml  setup.cfg  setup.py
svd_process/svd_process/: svd_process.py
ur_grasp_moveit_config/: CMakeLists.txt  package.xml
ur_grasp_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  name.srdf  ur_servo.yaml
ur_grasp_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_grasp_moveit_config/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ur_grasping_example/: CMakeLists.txt  package.xml
ur_grasping_example/launch/: pick_place.launch.py
ur_grasping_example/src/: pick_place.cpp
ur_grasping_example/urdf/: grasp_box.urdf  simple_box.xacro
ur_grasping_with_perception/: CMakeLists.txt  package.xml
ur_grasping_with_perception/config/: tags_36h11.yaml
ur_grasping_with_perception/include/ur_grasping_with_perception/: visibility_control.h
ur_grasping_with_perception/launch/: pick_place_with_perception.launch.py
ur_grasping_with_perception/src/: find_apriltag_server.cpp  mathys.cpp  pick_and_place_with_perception.cpp
ur_simulation_gazebo/: CMakeLists.txt
ur_simulation_gazebo/launch/: ur_sim_empty.launch.py
urdf/: intel_r430.urdf.xacro
